--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <title>祝小学生睡觉哥新年快乐！——来自问道叔的祝福</title>
+    <title>祝小学生睡觉哥新年快乐！(〃'▽'〃)</title>
   </head>
   <body id = "bgc">
     <audio id="a1" loop="loop">
