--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <source src="呆比睡觉哥.mp3">
     </audio>
     <div class="container">
-      <h2><span id="title">新年快乐，睡觉哥</span>2023年</h2>
+      <h2><span id="title">新年快乐，睡觉哥！</span>2023年</h2>
       <div class="countdown">
         <div id="day">--</div>
         <div id="hour">--</div>
