--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
     <title>祝小学生睡觉哥新年快乐！(〃'▽'〃)</title>
-    alert("我是对话框的内容");
+    if (confirm("睡到人间饭熟时是呆比吗")) {
+			alert('是');
+		} else{
+			alert('肯定是');
+		}
   </head>
   <body id = "bgc">
     <audio id="a1" loop="loop">
