--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
     <title>祝小学生睡觉哥新年快乐！(〃'▽'〃)</title>
-    if (confirm("睡到人间饭熟时是呆比吗")) {
-			alert('是');
-		} else{
-			alert('肯定是');
-		}
   </head>
   <body id = "bgc">
+    <a href="#"  onclick="alert('本网站已经关闭，进入不了！')">
     <audio id="a1" loop="loop">
       <source src="呆比睡觉哥.mp3">
     </audio>
