--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <title>祝小学生睡觉哥新年快乐！(〃'▽'〃)</title>
   </head>
   <body id = "bgc">
-    <a href="#"  onclick="alert('本网站已经关闭，进入不了！')">
+  if (confirm("睡觉哥你是不是小学生？")) {
+			alert('绝对是');
+		} else{
+			alert('肯定是');
+		}
     <audio id="a1" loop="loop">
       <source src="呆比睡觉哥.mp3">
     </audio>
