--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
     <title>祝小学生睡觉哥新年快乐！(〃'▽'〃)</title>
   </head>
   <body id = "bgc">
-  if (confirm("睡觉哥你是不是小学生？")) {
-			alert('绝对是');
-		} else{
-			alert('肯定是');
-		}
+	  var a = prompt("你是猴子请来的救兵吗","你管我");
+	aler(a)
     <audio id="a1" loop="loop">
       <source src="呆比睡觉哥.mp3">
     </audio>
