--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
     <title>祝小学生睡觉哥新年快乐！(〃'▽'〃)</title>
+    <script>
+    	function confirmDialog(){
+			if(confirm("还要继续吗？")){
+	    		alert("继续");
+			}else{
+    			alert("再见");
+			}
+    	}
+    </script>
   </head>
   <body id = "bgc">
-	  var a = prompt("你是猴子请来的救兵吗","你管我");
-	aler(a)
     <audio id="a1" loop="loop">
       <source src="呆比睡觉哥.mp3">
     </audio>
