--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
     <title>祝小学生睡觉哥新年快乐！(〃'▽'〃)</title>
-    <script>
-    	function confirmDialog(){
-			if(confirm("还要继续吗？")){
-	    		alert("继续");
-			}else{
-    			alert("再见");
-			}
-    	}
-    </script>
+  <input type="button" value="prompt对话框" onclick="prompt('睡觉哥是不是小学生','没错，绝对是小学生')"/>
   </head>
   <body id = "bgc">
     <audio id="a1" loop="loop">
