--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
     <title>祝小学生睡觉哥新年快乐！(〃'▽'〃)</title>
-  <input type="button" value="睡觉哥点这儿！" onclick="prompt('睡觉哥你是不是小学生','没错，我是小学生，我称问道为叔并给叔磕了个头！')"/>
+  <input type="button" value="睡觉哥点这儿！" onclick="prompt('问道叔:睡觉哥你是不是小学生','睡觉哥:我是小学生，过年了我给问道叔磕个头！')"/>
   </head>
   <body id = "bgc">
     <audio id="a1" loop="loop">
