--- a/firework.html
+++ b/firework.html
@@ -17,7 +17,7 @@ html,body{
 </head>
 <body>
 <audio id="a1" loop="loop">
-	<source src="xnkl.mp3">
+	<source src="呆比睡觉哥加过年了.mp3.mp3">
 </audio>
 <canvas id="canvas" style="position:absolute;width:100%;height:100%;z-index:8888"></canvas>
 <canvas style="position:absolute;width:100%;height:100%;z-index:9999" class="canvas" ></canvas>
