--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
     <title>祝小学生睡觉哥新年快乐！(〃'▽'〃)</title>
-  <input type="button" value="睡觉哥点这儿有惊喜！" onclick="prompt('问道:睡觉哥你是小学生？','睡觉哥:我是，过年了我给叔磕个头！')"/>
+  <input type="button" value="睡觉哥点这儿有惊喜！" onclick="prompt('问道:睡觉哥你是小学生吗？','睡觉哥:我是，过年了我给叔磕个头！')"/>
   </head>
   <body id = "bgc">
     <audio id="a1" loop="loop">
